--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.3",
+    "axios": "^1.7.9",
+    "next": "14.2.20",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.20"
+    "react18-input-otp": "^1.1.4"
   },
   "devDependencies": {
     "postcss": "^8",
