--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "next": "14.2.20",
     "react": "^18",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react18-input-otp": "^1.1.4"
   },
