--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.2.1",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
     "next": "14.2.20",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
-    "react18-input-otp": "^1.1.4"
+    "react-hook-form": "^7.54.2",
+    "react-select": "^5.9.0",
+    "react-select-search": "^4.1.8",
+    "react18-input-otp": "^1.1.4",
+    "zaman": "^2.1.1"
   },
   "devDependencies": {
     "postcss": "^8",
