--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "react-select": "^5.9.0",
     "react-select-search": "^4.1.8",
     "react18-input-otp": "^1.1.4",
