--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^6.2.1",
     "@tanstack/react-query": "^5.62.3",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
+    "moment-jalaali": "^0.10.4",
     "next": "14.2.20",
     "query-string": "^9.1.1",
     "react": "^18",
@@ -21,9 +24,12 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-select": "^5.9.0",
     "react-select-search": "^4.1.8",
     "react18-input-otp": "^1.1.4",
+    "swiper": "^11.2.1",
+    "yup": "^1.6.1",
     "zaman": "^2.1.1"
   },
   "devDependencies": {
