--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react18-input-otp": "^1.1.4",
     "swiper": "^11.2.1",
     "yup": "^1.6.1",
-    "zaman": "^2.1.1"
+    "zaman": "^2.1.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "postcss": "^8",
