--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-select": "^5.9.0",
     "react-select-search": "^4.1.8",
     "react18-input-otp": "^1.1.4",
+    "sass": "^1.85.0",
     "swiper": "^11.2.1",
     "yup": "^1.6.1",
     "zaman": "^2.1.1",
