--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "torino",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@hookform/resolvers": "^3.10.0",
-    "@mui/material": "^6.2.1",
-    "@tanstack/react-query": "^5.62.3",
-    "axios": "^1.7.9",
-    "moment": "^2.30.1",
-    "moment-jalaali": "^0.10.4",
-    "next": "14.2.20",
-    "query-string": "^9.1.1",
-    "react": "^18",
-    "react-countdown": "^2.3.6",
-    "react-dom": "^18",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.4.0",
-    "react-multi-date-picker": "^4.5.2",
-    "react-select": "^5.9.0",
-    "react-select-search": "^4.1.8",
-    "react18-input-otp": "^1.1.4",
-    "sass": "^1.85.0",
-    "swiper": "^11.2.1",
-    "yup": "^1.6.1",
-    "zaman": "^2.1.1",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+	"name": "torino",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@hookform/resolvers": "^3.10.0",
+		"@mui/material": "^6.2.1",
+		"@tanstack/react-query": "^5.62.3",
+		"axios": "^1.7.9",
+		"jalali-moment": "^3.3.11",
+		"moment": "^2.30.1",
+		"moment-jalaali": "^0.10.4",
+		"next": "14.2.20",
+		"query-string": "^9.1.1",
+		"react": "^18",
+		"react-countdown": "^2.3.6",
+		"react-dom": "^18",
+		"react-hook-form": "^7.54.2",
+		"react-icons": "^5.4.0",
+		"react-modern-calendar-datepicker": "github:Cow258/react-modern-calendar-datepicker#built",
+		"react-multi-date-picker": "^4.5.2",
+		"react-select": "^5.9.0",
+		"react-select-search": "^4.1.8",
+		"react18-input-otp": "^1.1.4",
+		"sass": "^1.85.0",
+		"swiper": "^11.2.1",
+		"yup": "^1.6.1",
+		"zod": "^3.24.2"
+	},
+	"devDependencies": {
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1"
+	}
 }
